[package]
name = "jcfmt"
version = "0.1.2"
edition = "2024"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
license = "MIT"
description = "A command-line tool to format JSONC (JSON with Comments) text"
homepage = "https://github.com/sile/jcfmt"
repository = "https://github.com/sile/jcfmt"
readme = "README.md"
categories = ["command-line-utilities"]

[dependencies]
noargs = "0.4.1"
nojson = "0.3.3"
